TODO
* update manuals
* libcaes
  - WinXP no AES support ?
  - WINAPI initialize provider only once - where to stick the init functions ?
  - wincrypt and EVP - make sure to pass block sized blocks ?
* check metadata number_of_volume_header_sectors ?
* debug print more volume header info

Optimizations
* pass values 32-bit to aes

Library
* add support for smart card + pin?
* add support for TPM ?

Test suite:
* add test scripts

Release:
* check debug output alignment
* automated tests - test suite
* msvscpp build
* check TODOs

Tools:
* bdeinfo
* bdeexport
* bdemount
  - implement ImDisk version for WINAPI
  - implement native MacOS-X version

Format:
* validation
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?
* why does Windows hide the last 4096 bytes of the volume?

Test images:
* for Windows Vista, Windows 7, To Go

Validate test cases:
* AES 128
* AES 128 diffuser
* AES 256
* AES 256 diffuser
* recovery key
* clear key
* partial encrypted volume
* startup key

20120511
* fixes for dpkg files

20120510
* small changes
* worked on msvscpp files

20120509
* applied updates
* added bdemount destroy function
* remove + 1 from volume size calculation, does not add up for
  volume-only storage media

20120310
* updated libnotify, libsystem

20120225
* fix for libfuse in spec file

20120208
* fix in dpkg/rules for include files

20120116
* 2012 update

20111218
* updated libcstring, libsystem, libfdata, libfvalue
* added libfcache

20111124
* updated libfdata

20111118
* code clean up

20111117
* code clean up
* updated libcstring, libsystem, libfdatetime, libfvalue, libhmac, libfguid,
  libfdata

20111102
* updated m4 files
* updated libcstring, libsystem, libuna, libbfio, libfdatetime, libfvalue,
  libhmac

20111022
* updated libfdatetime

20111020
* updated README.static
* combined recovery and user password iteration code

20111012
* update for Cygwin static executable support